--- a/src/app/recent-logins/recent-logins.component.scss
+++ b/src/app/recent-logins/recent-logins.component.scss
@@ -18,6 +18,7 @@ p {
   background-color: white;
   border: 1px solid #dddfe2;
   border-radius: 4px;
+  margin-bottom: 20px;
   &:hover {
     box-shadow: 0px 0px 8px $fbGray;
     transition: all .2s ease-out;
